[gd_scene load_steps=4 format=3 uid="uid://klow1figj7wn"]

[ext_resource type="Script" uid="uid://iu35mm22vxhi" path="res://Windows/Converse/converse_window.gd" id="1_mly6f"]

[sub_resource type="Gradient" id="Gradient_c64vf"]
colors = PackedColorArray(0.36157545, 0.36157548, 0.36157548, 1, 0.36078432, 0.36078432, 0.36078432, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h50mk"]
gradient = SubResource("Gradient_c64vf")

[node name="ConverseWindow" type="Window"]
oversampling_override = 1.0
title = "ConverseGPT: Prompt Nothing"
position = Vector2i(7, 31)
size = Vector2i(800, 600)

[node name="ConverseWindow" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_h50mk")
script = ExtResource("1_mly6f")

[node name="ScrollContainer" type="ScrollContainer" parent="ConverseWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="ConverseWindow/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ConverseWindow/ScrollContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ConverseWindow/ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "ConverseGPT"

[node name="LineEdit" type="LineEdit" parent="ConverseWindow/ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConverseWindow"]
layout_mode = 1
offset_right = 341.0
offset_bottom = 40.0

[node name="BuyCredits" type="Button" parent="ConverseWindow/HBoxContainer"]
layout_mode = 2
text = "Buy 100 Credits: $60"

[node name="Label" type="Label" parent="ConverseWindow/HBoxContainer"]
layout_mode = 2
text = "Premium Credits Left: "

[node name="Copy" type="Button" parent="ConverseWindow"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
text = "Copy Latest File Attachment"

[connection signal="close_requested" from="." to="ConverseWindow" method="_on_converse_window_close_requested"]
[connection signal="text_submitted" from="ConverseWindow/ScrollContainer/CenterContainer/VBoxContainer/LineEdit" to="ConverseWindow" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="ConverseWindow/HBoxContainer/BuyCredits" to="ConverseWindow" method="_on_buy_credits_pressed"]
[connection signal="pressed" from="ConverseWindow/Copy" to="ConverseWindow" method="_on_copy_pressed"]
